tests/fail/fail_types1.bb
<> Should fail with type error.

int x
int y
float z

x = 5
y = 7
z = x + y
